ContestManager/solutions/gnu_c++/12-log.txt
/home/dmitry/courseWork/ContestManager/solutions/gnu_c++/solve.cpp:4:52: error: empty character constant
 a = [elem for elem in a if elem != ' ' and elem != '']
                                                    ^
/home/dmitry/courseWork/ContestManager/solutions/gnu_c++/solve.cpp:1:1: error: ‘a’ does not name a type
 a = raw_input()
 ^
